[package]
name = "verkle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.3"
ark-poly = "0.3"
ark-ec = "0.3"
rand = {version = "0.8", optional = true}
blake3  = {version = "1.3"}
ark-serialize = "0.3"
ark-pallas = "0.3"
bit-vec = "0.6"
itertools = "0.10"
take_mut = "0.2"